--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta property="og:title" content="like">
-<meta property="og:description" content="relax">
-<meta property="og:image" content="https://img1.goodfon.com/original/3840x2400/3/c4/desert-rub-al-chali-pustynya.jpg">
+  <meta property="og:title" content="🔥Zakar anda akan menjadi besar🍆💦">
+<meta property="og:description" content="😉Cara yang terbukti👍">
+<meta property="og:image" content="https://i.imgur.com/1bu5gn2.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
