--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="🔥Zakar anda akan menjadi besar🍆💦">
 <meta property="og:description" content="😉Cara yang terbukti👍">
-<meta property="og:image" content="https://i.imgur.com/1bu5gn2.png">
+<meta property="og:image" content="https://i.imgur.com/1iOlPLB.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
